<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24px"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />
    <group android:menuCategory="container">
        <item android:id="@+id/themes"
            android:title="@string/themes"
            android:icon = "@drawable/ic_baseline_settings_24"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/favorites"
            android:title="@string/favorites"
            android:icon = "@drawable/ic_baseline_favorite_24_search"
            app:showAsAction="ifRoom"/>
    </group>
</menu>